--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -y texlive
 script:
-- latexmk.exe -pdf -synctex=1 "LabWork"
+- latexmk -pdf -synctex=1 "LabWork"
 #deploy:
 #  provider: releases
 #  api_key:
