--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 dist: trusty
 before_install:
-- sudo apt-get -qq update && sudo apt-get install -y latexmk texlive-latex-base texlive-latex-extra texlive-generic-extra texlive-lang-cyrillic texlive-bibtex-extra
+- sudo apt-get -qq update && sudo apt-get install -y latexmk texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-generic-extra texlive-lang-cyrillic texlive-bibtex-extra
 script:
 - latexmk -pdf -synctex=1 -f "LabWork"
 deploy:
